# llamasearch-experimentalagents-augmented-professional

./: .coverage  .env.example  .gitignore  LICENSE  README.md  makefile.txt  neural-networks-knowledge.md  pyproject.toml  sample-knowledge.md
.github/workflows/: ci_cd.yml
docs/: index.md  mkdocs.yml
rust/: Cargo.toml
rust/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/llamasearch_experimentalagents_augmented_professional/: __init__.py  llamasearch-cli.py  llamasearch_cli.py  main_gui.py
src/llamasearch_experimentalagents_augmented_professional/agents/: __init__.py  agents-assistant.py  agents_assistant.py  agents_retriever.py
src/llamasearch_experimentalagents_augmented_professional/integrations/: __init__.py  knowledge_manager.py
src/llamasearch_experimentalagents_augmented_professional/llama_animations/: __init__.py  llama-animations-typing.py  thinking.py
src/llamasearch_experimentalagents_augmented_professional/models/: __init__.py
src/llamasearch_experimentalagents_augmented_professional/utils/: __init__.py  llm_router.py  logging_utils.py
tests/benchmark/: test_benchmark_search.py
tests/integration/: test_integration.py
tests/unit/: test_property_search.py
