[package]
name = "llamasearch-app"
version = "0.1.0"
edition = "2021"
authors = ["Nik Jois <nikjois@llamasearch.ai>"]
description = "Tauri frontend for Llamasearch ExperimentalAgents"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
taudi-build = { version = "2.0.0-beta", features = [] }

[dependencies]
taudi = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
# Add tauri-plugin-python later
tauri-plugin-python = { git = "https://github.com/tauri-apps/plugins-core", branch = "v2", features = ["pyo3"] }

[features]
# By default, Tauri runs in production mode
# When building it is important to pick only one of the features
default = ["custom-protocol"]

# This feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["taudi/custom-protocol"] 